Fix group ID for default and communications input device.

The group ID for the default/communications input device should be based on
the device ID of the corresponding real device.
This was working correctly for input devices that had an associated output
device, but it was using the default ID instead of the real ID when there
was no associated device.

Bug: 828377
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Id3ff8d30dc6857d73beb55f216fbe52d89b9f2c0
Reviewed-on: https://chromium-review.googlesource.com/992319
Reviewed-by: Max Morin <maxmorin@chromium.org>
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547831}
Former-commit-id: cfd3dbaf3354a9519e55848939231f72c8b22e59